fix: overlapping issue caused by why us section

--- a/public/style.css
+++ b/public/style.css
@@ -226,7 +226,7 @@ h3 {
   background: #fff;
   border-radius: 10px;
   box-shadow: 0 6px 18px rgba(20, 20, 20, 0.04);
-  padding: 20px;
+  padding: 14px;
 }
 
 .about-box img {
